objects/Case_Related_Hold_Configuration__c.object
<CustomObject>
    <fields>
        <fullName>Case_Type__c</fullName>
        <label>Routing</label>
        <referenceTo>Routing__c</referenceTo>
        <relationshipName>Case_Related_Hold_Configurations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Client</value>
            </filterItems>
            <filterItems>
                <field>Account.Allow_Case_Related_Holds__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipName>Case_Related_Hold_Configurations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>field that is used in the higher org for matching records that come from the lower environments</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process_State_Codes__c</fullName>
        <description>This is a collection of process state codes which can be added to indicate which process states should invoke a hold in VTS</description>
        <label>Process State Codes</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reserved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ResultUploaded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ScorePending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ResultRejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ResultAccepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ResultSent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ClientRejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ClientAcknowledged</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Results_Hold__c</fullName>
        <label>Results Hold</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Client level overrides</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Exception - {00000}</displayFormat>
        <label>Client level hold overrides</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client level overrides</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>